tests/errors/second_stage/.entry/symbol_is_extern/symbol_is_extern.as
; trying to define an extern symbol as entry
.extern myExt
.entry myExt